<resources>
    <string name="app_name">Messenger</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tw_forgot_password">Forgot password?</string>
    <string name="tw_register">Register</string>
    <string name="tw_app_name">Messenger App</string>
    <string name="error_empty_fields">Fill in all fields!</string>
    <string name="tw_registration">Registration</string>
    <string name="et_hint_name">Name</string>
    <string name="et_hint_last_name">Last name</string>
    <string name="et_hint_age">Age</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="menu_item_logout">Logout</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="et_hint_type_message">Message:</string>
</resources>